<resources>
    <string name="app_name" translatable="false">alex_bou</string>
    <string name="btnPlay">Play</string>
    <string name="btnRanking">Ranking</string>
    <string name="btnSetting">Settings</string>
    <string name="btnAbout">About…</string>
    <string name="app">App</string>
    <string name="team">Team</string>
    <string name="txtAboutUs">This app was developed by Alex Bou, currently studying a course in cross-platform app development in Stucom centre d\'estudis, check where you can find us by tapping the button below.</string>
    <string name="txtAboutApp">This app is under development, in this release you can tap the settings functionality to save your data persistently, no need to press any button to save it\'s an automated procedure.</string>
    <string name="subTitleAboutUs">Team</string>
    <string name="subTitleAboutApp">App</string>
    <string name="imgInfo">info icon</string>
    <string name="imgUs">team image</string>
    <string name="btnMap">Where we work</string>
    <string name="txtMenu">Menu</string>
    <string name="title_activity_maps">Map</string>
    <string name="stucomLocation">Stucom location</string>
    <string name="titleStucom">Stucom centre d\'Estudis</string>
    <string name="inputName">Username</string>
    <string name="inputEmail">Email</string>
    <string name="txtSetting">Hint: tap on the image to change it.</string>
    <string name="imgDialogTitle">Select a source for your image</string>
    <string name="txtGallery">Gallery</string>
    <string name="txtCamera">Camera</string>
    <string name="txtDelete">Delete</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="score">Score</string>
    <string name="submit">Submit</string>
    <string name="level">Level</string>
    <string name="delete_account">Delete account</string>
    <string name="downloading_user_data">Downloading user data…</string>
    <string name="send">Send</string>
    <string name="text_verify">Please introduce your email address so we can register your application, an email will be sent with a code to verify your identity.</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="text_finish_verify">In order to complete your registration, enter the verify code sent to your email address.</string>
    <string name="verify_code">Verify code</string>
    <string name="change_email">Change email</string>
    <string name="message_sent_status">Status of the message sent</string>
    <string name="text_image_user">Image of the user</string>
    <string name="new_game">New Game</string>
    <string name="you_lost">You lost</string>
</resources>
